--- a/index.htm
+++ b/index.htm
@@ -42,6 +42,9 @@
             </div>
         </div>
     </div>
+    <div class="footer">
+        <h3>DEVELOPED BY HOLAFIX <img src="twitter.png"></h3>
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
